--- a/_modules/thetis/turbines.html
+++ b/_modules/thetis/turbines.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>thetis.turbines &#8212; Thetis 0+untagged.1276.g4e1ded2 documentation</title>
+    <title>thetis.turbines &#8212; Thetis 0+untagged.1278.g687ecb8 documentation</title>
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
