--- a/animationgrid.html
+++ b/animationgrid.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>&lt;no title&gt; &#8212; Thetis 0+untagged.1278.g687ecb8 documentation</title>
+    <title>&lt;no title&gt; &#8212; Thetis 0+untagged.1284.g0b23eeb documentation</title>
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -59,8 +59,8 @@
 <col width="48%" />
 </colgroup>
 <tbody valign="top">
-<tr class="row-odd"><td><iframe width="415" height="276" src="http://www.youtube.com/embed/K6ggbbfVWpc?modestbranding=1&controls=1&rel=0" frameborder="0" allowfullscreen></iframe></td>
-<td><iframe width="415" height="276" src="http://www.youtube.com/embed/CO4ijMd4hzg?modestbranding=1&controls=1&rel=0" frameborder="0" allowfullscreen></iframe></td>
+<tr class="row-odd"><td><iframe width="415" height="276" src="https://www.youtube.com/embed/K6ggbbfVWpc?modestbranding=1&controls=1&rel=0" frameborder="0" allowfullscreen></iframe></td>
+<td><iframe width="415" height="276" src="https://www.youtube.com/embed/CO4ijMd4hzg?modestbranding=1&controls=1&rel=0" frameborder="0" allowfullscreen></iframe></td>
 </tr>
 <tr class="row-even"><td><iframe width="415" height="276" src="https://www.youtube.com/embed/84LAhSGNgMQ?modestbranding=1&controls=1&rel=0" frameborder="0" allowfullscreen></iframe></td>
 <td><iframe width="415" height="276" src="https://www.youtube.com/embed/k2lLrdzbY54?modestbranding=1&controls=1&rel=0" frameborder="0" allowfullscreen></iframe></td>
