--- a/py-modindex.html
+++ b/py-modindex.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Python Module Index &#8212; Thetis 0+untagged.1562.gc08033a documentation</title>
+    <title>Python Module Index &#8212; Thetis 0+untagged.1565.gce988c6 documentation</title>
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
