--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Search &#8212; Thetis 0+untagged.1562.gc08033a documentation</title>
+    <title>Search &#8212; Thetis 0+untagged.1565.gce988c6 documentation</title>
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     
